--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tiago Aro",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongoose": "^5.3.12",
     "nodemailer": "^4.6.8",
