Refactoring da estrutura do projeto

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sendmail",
   "version": "1.0.0",
-  "description": "API to sendmail",
-  "main": "app.js",
+  "description": "RESTFull APIs",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon"
